--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_staggered_grid_view: ^0.7.0    # example additional package
   cloud_firestore: ^5.6.12
-  photo_manager: ^3.0.0
-  permission_handler: ^11.0.1
+  photo_manager: ^3.7.1
+  permission_handler: ^12.0.1
+  device_info_plus: ^12.2.0
 
 
 
