--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   photo_manager: ^3.7.1
   permission_handler: ^12.0.1
   device_info_plus: ^12.2.0
+  image_editor_plus: ^1.0.8
+  path_provider: ^2.1.5
+  path: ^1.9.1
+  intl: ^0.20.2
 
 
 
