--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,8 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   intl: ^0.20.2
-
-
+  provider: ^6.1.2
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   integration_test:
