--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Ensure consistent JVM target across all modules
+kotlin.jvm.target.validation.mode=warning
+# Force Java 11 for all compilation tasks
+org.gradle.java.installations.auto-download=false
