--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,18 @@ dependencies:
   share_plus: ^12.0.1
   receive_sharing_intent: ^1.8.1
 
+
 dev_dependencies:
-  integration_test:
-    sdk: flutter
-  flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  android_gravity: center
+  background_color: "000000"
+  image_path: "assets/last.png"   # <-- your logo
+
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
